# GreenEye_Assigment

./: CMakeLists.txt  DisplayImage  DisplayImage.cpp  GrayImages.cpp  README  plotGraph.py
